--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,18 @@
-absl-py==1.0.0
-aiohttp==3.8.1
-aiosignal==1.2.0
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==21.4.0
 beautifulsoup4==4.11.1
-cachetools==5.1.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-click==8.1.3
-colorama==0.4.4
-configparser==5.2.0
-coverage==6.4
-cycler==0.11.0
-Cython==0.29.30
-docopt==0.6.2
-embeddings==0.0.8
-et-xmlfile==1.1.0
-fasttext==0.9.2
-filelock==3.7.1
+cube==0.0.3
 Flask==2.1.2
-flatbuffers==1.12
-fonttools==4.33.3
-free-proxy==1.0.6
-frozenlist==1.3.0
-fsspec==2022.5.0
-future==0.18.2
-gast==0.4.0
-google-auth==2.6.6
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.46.3
-gunicorn==20.1.0
-h5py==3.7.0
-idna==3.3
-importlib-metadata==4.11.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.1.0
+fp==0.2
+free_proxy==1.0.6
 keras==2.9.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.2
-libclang==14.0.1
-lxml==4.8.0
-Markdown==3.3.7
-MarkupSafe==2.1.1
 matplotlib==3.5.2
-multidict==6.0.2
 nlpcube==0.3.1.1
-nltk==3.7
-nose2==0.7.3
 numpy==1.22.3
-oauthlib==3.2.0
-openpyxl==3.0.9
-opt-einsum==3.3.0
-packaging==21.3
 pandas==1.4.2
-Pillow==9.1.1
-pipreqs==0.4.11
-protobuf==3.19.4
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pybind11==2.9.2
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytorch-lightning==1.2.10
-pytz==2022.1
-PyYAML==6.0
-regex==2022.4.24
 requests==2.27.1
-requests-oauthlib==1.3.1
-requests-random-user-agent==2022.5.3
-rsa==4.8
-sacremoses==0.0.53
-scikit-learn==1.1.1
-scipy==1.8.1
-sentencepiece==0.1.96
-six==1.16.0
-soupsieve==2.3.2.post1
+requests_random_user_agent==2022.5.3
+scikit_learn==1.1.1
 stopwordsiso==0.6.1
-tensorboard==2.9.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
-threadpoolctl==3.1.0
-tokenizers==0.9.4
-torch==1.11.0
-torchmetrics==0.2.0
-tqdm==4.64.0
-transformers==4.2.2
-typing_extensions==4.2.0
 urllib3==1.26.9
-Werkzeug==2.1.2
 wordcloud==1.8.1
-wrapt==1.14.1
-xmltodict==0.11.0
-yarg==0.1.9
-yarl==1.7.2
-zipp==3.8.0
+gunicorn==20.1.0
+tokenizers==0.12.1
